#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libintrusive], [0.0], [test@test.com])
AM_CONFIG_HEADER([config.h])
# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_MACRO_DIR([m4])
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_CC
AM_INIT_AUTOMAKE([1.9 foreign])
AC_CONFIG_FILES([Makefile src/Makefile])
LT_INIT
AC_OUTPUT
